add some styling

--- a/src/Domain/Objects/Translator/SiteTranslator/site.pug
+++ b/src/Domain/Objects/Translator/SiteTranslator/site.pug
@@ -17,7 +17,7 @@ html(lang="en")
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     title Hubi Site of Ubiquitous Language
-    link(rel="stylesheet" href="")
+    link(rel="stylesheet" href="hubi.css")
   body
     each token in tokens
       +withToken(token)
