--- a/src/Domain/Objects/Translator/SiteTranslator/site.pug
+++ b/src/Domain/Objects/Translator/SiteTranslator/site.pug
@@ -1,7 +1,11 @@
-mixin withAttribute({ name, description })
+mixin withAttribute({ name, description, deprecated })
   li(class="attribute")
     strong(class="attribute__name") #{name}
     span(class="attribute__description") : #{description}
+    if (deprecated)
+      div(class="attribute__deprecation-note")
+        span(class="attribute__deprecation-note__icon") ⚠
+        span #{deprecated}
 
 mixin withToken({ name, object })
   details(id=name, name=name, class="token")
