--- a/src/Domain/Objects/Translator/SiteTranslator/site.pug
+++ b/src/Domain/Objects/Translator/SiteTranslator/site.pug
@@ -4,11 +4,13 @@ mixin withDeprecation (type, { message, error })
     span(class=classes) ⚠
     span #{message}
 
-mixin withAttribute({ name, description, deprecated })
+mixin withAttribute({ name, description, deprecated, default: standard })
   li(class="attribute")
     strong(class="attribute__name") #{name}
+    if (standard !== undefined)
+      span(class="attribute__default") (#{standard})
     span(class="attribute__description") : #{description}
-    if (deprecated)
+    if (deprecated !== undefined)
       +withDeprecation("attribute", deprecated)
 
 mixin withTokenDeprecation({ message, error })
