add fork ribbon

--- a/src/Domain/Objects/Translator/SiteTranslator/hubi.pug
+++ b/src/Domain/Objects/Translator/SiteTranslator/hubi.pug
@@ -1,2 +1,3 @@
 header.hubi__info
   span.hubi__info__text Generated with ❤ by <a href="https://www.npmjs.com/package/hubi" target="_blank">hubi</a>
+  a(class="github-fork-ribbon" href="https://github.com/mvcds/hubi" data-ribbon="Fork me on GitHub" title="Fork me on GitHub" target="_blank") Fork me on GitHub
