--- a/src/Domain/Objects/Translator/SiteTranslator/site.pug
+++ b/src/Domain/Objects/Translator/SiteTranslator/site.pug
@@ -25,10 +25,23 @@ mixin withTokenDeprecation({ message, error })
     span(class=classes) ⚠
     span #{message}
 
+mixin withAliases(aliases)
+  if (aliases)
+    small(class="token__aliases")
+      | (A.K.A&nbsp;
+      each alias, index in aliases
+        span(name=alias) #{alias}
+        if (index !== aliases.length - 1)
+          | ,&nbsp;
+      | )
+
 mixin withToken({ name, object })
   details(id=name, name=name, class="token")
     summary(class="token__title")
       span(class="token__name") #{object.rawName}
+
+      +withAliases(object.aliases)
+
       if (object.deprecated)
         +withDeprecation("token", object.deprecated)
 
