--- a/docs/hubi.css
+++ b/docs/hubi.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  color: #292b36;
 }
 
 colgroup {
@@ -10,12 +11,12 @@ colgroup {
 
 .token {
   padding: 8px;
-  border-top: 1px solid black;
+  border-top: 1px solid #292b36;
   margin-top: -1px;
 }
 
 .token:last-child {
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #292b36;
 }
 
 .token__title {
@@ -77,7 +78,7 @@ colgroup {
 }
 
 .attributes_table tbody tr:nth-child(odd) {
-  background: #CCC;
+  background: #f5f5f5;
 }
 
 .attributes_table tr {
@@ -117,12 +118,9 @@ colgroup {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
-  cursor: help;
-}
-
-.attributes_table tbody tr:nth-child(even) .comment-bubble {
   background-color: #CCC;
+  cursor: help;
+  color: #292b36;
 }
 
 .attribute__description {
@@ -131,7 +129,7 @@ colgroup {
 
 .comment-bubble__comment {
   position: absolute;
-  border: 1px solid black;
+  border: 1px solid #292b36;
   background: white;
   top: -20px;
   padding: 10px;
