fix(site): change the title of the table

--- a/src/Domain/Objects/Translator/SiteTranslator/site.pug
+++ b/src/Domain/Objects/Translator/SiteTranslator/site.pug
@@ -87,7 +87,7 @@ mixin withToken({ name, object })
           col(width="1%")
         thead
           tr
-            th Name
+            th Attributes
             th Description
             th Default
         tbody
