fix(ui): use 2 fonts at max

--- a/src/Domain/Objects/Translator/SiteTranslator/site.pug
+++ b/src/Domain/Objects/Translator/SiteTranslator/site.pug
@@ -77,7 +77,7 @@ mixin withToken({ name, object })
     p(class="token__description") #{object.description}
 
     if (object.comment)
-      p(class="token__comment") #{object.comment}
+      p(class="token__comment") &#9432; #{object.comment}
 
     if (object.attributes.length)
       table(class="attributes_table")
