--- a/docs/hubi.css
+++ b/docs/hubi.css
@@ -64,8 +64,10 @@ colgroup {
 
 .token__comment {
   margin: 0;
-  padding: 8px;
-  font-family: fantasy;
+  padding: 16px;
+  border-radius: 8px;
+  border: 1px solid black;
+  background-color: #f5f5f5;
 }
 
 .token__aliases {
